--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <h2 class="text-center mb-4">Drawing Samples</h2>
     <div class="row">
       <div class="col-md-4 mb-4">
-        <img src="image/image1.jpg" alt="Sample 1" class="img-fluid rounded shadow-sm hover-effect">
+        <img src="image/img2.JPG" alt="Sample 1" class="img-fluid rounded shadow-sm hover-effect">
       </div>
       <div class="col-md-4 mb-4">
         <img src="image/Grey and Blue Modern Minimalist Photo Collage A4 Document.png" alt="Sample 2" class="img-fluid rounded shadow-sm hover-effect">
@@ -55,7 +55,7 @@
   <!-- About Section -->
   <section id="about" class="container my-5 text-center">
     <h2 class="mb-4">About Me</h2>
-    <img src="image/profile.jpg" alt="Artist Photo" class="rounded-circle mb-3" width="150" height="150">
+    <img src="image/profile2.JPG" alt="Artist Photo" class="rounded-circle mb-3" width="150" height="150">
     <p>Hi, I'm <strong>Nipun Nirman</strong>, a Computer Science student at the University of Westminster with over 7 years of experience in pencil art. I specialize in realistic portrait sketches and custom artwork for clients worldwide. My passion for combining technology and creativity has led me to explore new ways of sharing traditional art online. Every pencil stroke I make tells a story – personal, emotional, and timeless. Let me help turn your memories into stunning hand-drawn masterpieces.</p>
   </section>
 
