--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link" href="#gallery">Art Gallery</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Gift Box</a></li>
+          <li class="nav-item"><a class="nav-link" href="giftbox.html">Gift Box</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Prices & Sizes</a></li>
         </ul>
       </div>
@@ -42,7 +42,7 @@
     <h2 class="text-center mb-4">Drawing Samples</h2>
     <div class="row">
       <div class="col-md-4 mb-4">
-        <img src="image/img3.jpg" alt="Sample 1" class="img-fluid rounded shadow-sm hover-effect">
+        <img src="image/img2.JPG" alt="Sample 1" class="img-fluid rounded shadow-sm hover-effect">
       </div>
       <div class="col-md-4 mb-4">
         <img src="image/Grey and Blue Modern Minimalist Photo Collage A4 Document.png" alt="Sample 2" class="img-fluid rounded shadow-sm hover-effect">
