--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
   <!-- Hero Section with Background Video -->
 <section class="hero-section">
     <video autoplay muted loop playsinline class="bg-video">
-      <source src="image/Loop Background | Live Wallpaper | Chilling Cat | No Sound.mp4" type="video/mp4">
-      Your browser does not support HTML5 video.
+      <source src="image/looop.mp4" type="video/mp4">
+    
     </video>
     <div class="hero-content">
       <h1>Welcome to Through My Pencil</h1>
@@ -57,7 +57,7 @@
     <h2 class="text-center mb-4"></h2>
     <div class="row">
       <div class="col-md-4 mb-4">
-        <img src="image/img2.JPG" alt="Sample 1" class="img-fluid rounded shadow-sm hover-effect">
+        <img src="image/p8.JPEG" alt="Sample 1" class="img-fluid rounded shadow-sm hover-effect">
       </div>
       <div class="col-md-4 mb-4">
         <img src="image/Grey and Blue Modern Minimalist Photo Collage A4 Document.png" alt="Sample 2" class="img-fluid rounded shadow-sm hover-effect">
