--- a/index.html
+++ b/index.html
@@ -56,14 +56,15 @@
   <section id="gallery" class="container my-5">
     <h2 class="text-center mb-4"></h2>
     <div class="row">
+     <!----> 
+      <div class="col-md-4 mb-4">
+        <img src="image/d1.png" alt="Sample 2" class="img-fluid rounded shadow-sm hover-effect">
+      </div>
+      <div class="col-md-4 mb-4">
+        <img src="image/Grey and Blue Modern Minimalist Photo Collage A4 Document.png" alt="Sample 3" class="img-fluid rounded shadow-sm hover-effect">
+      </div>
       <div class="col-md-4 mb-4">
         <img src="image/p8.JPEG" alt="Sample 1" class="img-fluid rounded shadow-sm hover-effect">
-      </div>
-      <div class="col-md-4 mb-4">
-        <img src="image/Grey and Blue Modern Minimalist Photo Collage A4 Document.png" alt="Sample 2" class="img-fluid rounded shadow-sm hover-effect">
-      </div>
-      <div class="col-md-4 mb-4">
-        <img src="image/c2.JPEG" alt="Sample 3" class="img-fluid rounded shadow-sm hover-effect">
       </div>
     </div>
   </section>
