--- a/price.html
+++ b/price.html
@@ -88,14 +88,29 @@
       <p>Drawings will be ready within <strong>5 days</strong>. We use <strong>fiber frames</strong>, <strong>high-quality durable papers</strong>, and ensure <strong>safe packaging</strong> for delivery.</p>
       <p>If you're interested, click below to send me your order on WhatsApp.</p>
       
-      <a class="whatsapp-btn mt-3" href="https://wa.me/94711234567?text=I'm%20interested%20in%20ordering%20a%20custom%20pencil%20drawing!" target="_blank">
+      <a class="whatsapp-btn mt-3" href="https://wa.me/+94757105455" target="_blank">
         📱 Send Order on WhatsApp
       </a>
     </div>
   </section>
+  <div class="floating-buttons">
+    <button onclick="topFunction()" id="topBtn" title="Go to top">Top</button>
+    
+  </div>
+
 
   <!-- Go to Top Button -->
-  <button onclick="topFunction()" id="topBtn" title="Go to top">↑</button>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    const topBtn = document.getElementById("topBtn");
+    window.onscroll = function() {
+      topBtn.style.display = (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) ? "block" : "none";
+    };
+    function topFunction() {
+      document.body.scrollTop = 0;
+      document.documentElement.scrollTop = 0;
+    }
+  </script>
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
