social page add

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="price.html">Price List</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="user.html">social</a>
+              </li>
             </ul>
           </div>
         </div>
@@ -54,24 +57,18 @@
 
   <!-- Gallery Section -->
   <section id="gallery" class="container my-5">
-    <h2 class="text-center mb-4"></h2>
-    <div class="row">
-     <!----> 
-      <div class="col-md-4 mb-4">
-        <img src="image/d1.png" alt="Sample 2" class="img-fluid rounded shadow-sm hover-effect">
-      </div>
-      <div class="col-md-4 mb-4">
-        <img src="image/Grey and Blue Modern Minimalist Photo Collage A4 Document.png" alt="Sample 3" class="img-fluid rounded shadow-sm hover-effect">
-      </div>
-      <div class="col-md-4 mb-4">
-        <img src="image/p8.JPEG" alt="Sample 1" class="img-fluid rounded shadow-sm hover-effect">
+    <h2 class="text-center mb-4">Art Gallery</h2>
+    <div class="row justify-content-center">
+      <div class="col-lg-10 col-md-12">
+        <img src="image/Modern Fashion Clothing Online Shop Showroom Facebook Cover.jpg" alt="Sample 1" class="img-fluid gallery-img shadow-sm hover-effect">
       </div>
     </div>
   </section>
+  
   <!-- About Section -->
   <section id="about" class="container my-5 text-center">
     <h2 class="mb-4">About Me</h2>
-    <img src="image/profile3.JPG" alt="Artist Photo" class="img-fluid feedback-img mb-3" width="150" >
+    
     <p>Hi, I'm <strong>Nipun Nirman</strong>, a Computer Science student at the University of Westminster with over 7 years of experience in pencil art. I specialize in realistic portrait sketches and custom artwork for clients worldwide. My passion for combining technology and creativity has led me to explore new ways of sharing traditional art online. Every pencil stroke I make tells a story – personal, emotional, and timeless. Let me help turn your memories into stunning hand-drawn masterpieces.</p>
   </section>
 
@@ -131,7 +128,7 @@
   <footer class="bg-light text-center py-4">
     <p>&copy; 2025 Through My Pencil. All rights reserved.</p>
     <div class="social-links mt-3">
-      <a href="https://web.facebook.com/?_rdc=1&_rdr" target="_blank" class="me-3">Facebook</a>
+      <a href="https://web.facebook.com/nipun.nirman.2025" target="_blank" class="me-3">Facebook</a>
       <a href="https://www.instagram.com/nipun.nirman/" target="_blank" class="me-3">Instagram</a>
       <a href="https://x.com/PencilThrough" target="_blank">Twitter</a>
     </div>
