--- a/giftbox.html
+++ b/giftbox.html
@@ -31,6 +31,9 @@
           <li class="nav-item">
             <a class="nav-link" href="price.html">Price List</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="user.html">social</a>
+          </li>
         </ul>
       </div>
     </div>
