--- a/index.html
+++ b/index.html
@@ -55,15 +55,7 @@
   </section>
   
 
-  <!-- Gallery Section -->
-  <section id="gallery" class="container my-5">
-    <h2 class="text-center mb-4">Art Gallery</h2>
-    <div class="row justify-content-center">
-      <div class="col-lg-10 col-md-12">
-        <img src="image/Modern Fashion Clothing Online Shop Showroom Facebook Cover.jpg" alt="Sample 1" class="img-fluid gallery-img shadow-sm hover-effect">
-      </div>
-    </div>
-  </section>
+ 
   
   <!-- About Section -->
   <section id="about" class="container my-5 text-center">
@@ -72,6 +64,17 @@
     <p>Hi, I'm <strong>Nipun Nirman</strong>, a Computer Science student at the University of Westminster with over 7 years of experience in pencil art. I specialize in realistic portrait sketches and custom artwork for clients worldwide. My passion for combining technology and creativity has led me to explore new ways of sharing traditional art online. Every pencil stroke I make tells a story – personal, emotional, and timeless. Let me help turn your memories into stunning hand-drawn masterpieces.</p>
   </section>
 
+   <!-- Gallery Section -->
+
+  <section id="gallery" class="container my-5">
+    <h2 class="text-center mb-4">Art Gallery</h2>
+    <div class="row justify-content-center">
+      <div class="col-lg-10 col-md-12">
+        <img src="Modern Fashion Clothing Online Shop Showroom Facebook Cover.jpg" alt="Sample 1" class="img-fluid gallery-img shadow-sm hover-effect">
+      </div>
+    </div>
+  </section>
+  
   <!-- Customer Feedback -->
   <section class="bg-light py-5">
     <div class="container">
